--- a/蓝牙指纹控制开关锁/1.项目代码/BH-F103/Output/Fire_FreeRTOS.build_log.htm
+++ b/蓝牙指纹控制开关锁/1.项目代码/BH-F103/Output/Fire_FreeRTOS.build_log.htm
@@ -22,14 +22,14 @@ Dialog DLL:      TCM.DLL V1.53.0.0
  
 <h2>Project:</h2>
 C:\Users\12291\Desktop\蓝牙指纹控制开关锁\1.项目代码\BH-F103\Project\RVMDK（uv5）\Fire_FreeRTOS.uvprojx
-Project File Date:  05/24/2023
+Project File Date:  05/28/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'D:\keil 5\1\ARM\ARMCC\Bin'
 Build target 'Fire_FreeRTOS'
-compiling bsp_task.c...
+compiling bsp_as608.c...
 linking...
-Program Size: Code=19830 RO-data=1858 RW-data=252 ZI-data=41044  
+Program Size: Code=24222 RO-data=1858 RW-data=268 ZI-data=40124  
 FromELF: creating hex file...
 "..\..\Output\Fire_FreeRTOS.axf" - 0 Error(s), 0 Warning(s).
 
@@ -44,7 +44,7 @@ Package Vendor: Keil
   D:\keil 5\2\Keil\STM32F1xx_DFP\2.4.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
